feat: all the endpoints, handler and routes are initialized; swagger works; no tests with subscribe - Docker not implemented
