# task4/repo-stat/api/internal/controller/http/routes.go
@@ -10,8 +10,12 @@ import (
 	_ "repo-stat/api/docs"
 )
 
-func AddRoutes(mux *http.ServeMux, log *slog.Logger, ping *usecase.Ping, fetch *usecase.Fetch) {
+func AddRoutes(mux *http.ServeMux, log *slog.Logger, ping *usecase.Ping, fetch *usecase.Fetch, retriever *usecase.RetrieverUseCase) {
 	mux.Handle("GET /api/ping", NewPingHandler(log, ping))
 	mux.Handle("GET /api/repositories/info", NewGetInfoHandler(log, fetch))
 	mux.Handle("/swagger/", httpSwagger.WrapHandler)
+	mux.Handle("GET /subscriptions", NewSubInfoHandler(log, retriever))
+	mux.Handle("POST /subscriptions/", NewSubscribeHandler(log, retriever))
+	mux.Handle("DELETE /subscriptions/", NewUnsubscribeHandler(log, retriever))
+	mux.Handle("GET /subscriptions/info", NewGetSubInfoHandler(log, fetch))
 }
