# task4/repo-stat/api/internal/usecase/get_info.go
@@ -15,6 +15,9 @@ func NewFetch(fetcher Fetcher) *Fetch {
 	}
 }
 
-func (f *Fetch) Execute(ctx context.Context, owner, repo string) (domain.Repo, error) {
+func (f *Fetch) GetInfo(ctx context.Context, owner, repo string) (domain.Repo, error) {
 	return f.fetcher.GetInfo(ctx, owner, repo)
+}
+func (f *Fetch) GetSubInfo(ctx context.Context) ([]domain.Repo, error) {
+	return f.fetcher.GetSubInfo(ctx)
 }
